--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -206,6 +206,7 @@
     <Content Include="Areas\ProgAdmin\Views\Reports\ReportViewer.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Stats\Conv.cshtml" />
     <Compile Include="Areas\RevTrack\Controllers\ClientsController.cs" />
+    <Compile Include="Areas\RevTrack\Controllers\VendorsController.cs" />
     <Compile Include="Areas\RevTrack\RevTrackAreaRegistration.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
@@ -1003,6 +1004,7 @@
     <Content Include="Areas\ProgAdmin\Views\TDads\Edit.cshtml" />
     <Content Include="Areas\RevTrack\Views\web.config" />
     <Content Include="Areas\RevTrack\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\RevTrack\Views\Vendors\Index.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
