--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -432,7 +432,7 @@
     <Compile Include="Etl\SearchMarketing\Extracters\AdWordsApiExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\AnalyticsApiExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingCsvReportExtracter.cs" />
-    <Compile Include="Etl\SearchMarketing\Extracters\BingDailySummaryExtracter.cs" />
+    <Compile Include="Etl\SearchMarketing\Extracters\BingApiExtracters.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\CriteoApiExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\CriteoApiExtracter2.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\LocalConnexApiExtracter.cs" />
