--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -191,6 +191,10 @@
     <Compile Include="MigrationsRT\201611292309548_Mig_ProgBudgetInfos.Designer.cs">
       <DependentUpon>201611292309548_Mig_ProgBudgetInfos.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsRT\201611292320559_Mig_ProgSummary.cs" />
+    <Compile Include="MigrationsRT\201611292320559_Mig_ProgSummary.Designer.cs">
+      <DependentUpon>201611292320559_Mig_ProgSummary.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsRT\Configuration.cs" />
     <Compile Include="MigrationsTD\201507282051383_Initial.cs" />
     <Compile Include="MigrationsTD\201507282051383_Initial.Designer.cs">
@@ -411,6 +415,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsRT\201611292309548_Mig_ProgBudgetInfos.resx">
       <DependentUpon>201611292309548_Mig_ProgBudgetInfos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsRT\201611292320559_Mig_ProgSummary.resx">
+      <DependentUpon>201611292320559_Mig_ProgSummary.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201507282051383_Initial.resx">
       <DependentUpon>201507282051383_Initial.cs</DependentUpon>
