start of: SuperRepository, RevTrack/Dashboard

--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -206,7 +206,9 @@
     <Content Include="Areas\ProgAdmin\Views\Reports\ReportViewer.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Stats\Conv.cshtml" />
     <Compile Include="Areas\RevTrack\Controllers\ClientsController.cs" />
+    <Compile Include="Areas\RevTrack\Controllers\DashboardController.cs" />
     <Compile Include="Areas\RevTrack\Controllers\VendorsController.cs" />
+    <Compile Include="Areas\RevTrack\Models\DashboardVM.cs" />
     <Compile Include="Areas\RevTrack\RevTrackAreaRegistration.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
@@ -833,7 +835,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Areas\RevTrack\Models\" />
     <Folder Include="Areas\RevTrack\Views\Clients\" />
     <Folder Include="Areas\RevTrack\Views\Shared\" />
     <Folder Include="Views\Test\" />
@@ -1005,6 +1006,7 @@
     <Content Include="Areas\RevTrack\Views\web.config" />
     <Content Include="Areas\RevTrack\Views\_ViewStart.cshtml" />
     <Content Include="Areas\RevTrack\Views\Vendors\Index.cshtml" />
+    <Content Include="Areas\RevTrack\Views\Dashboard\Index.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
