--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -7,6 +7,7 @@
   </configSections>
 
   <connectionStrings>
+    <add name="ABContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=False" providerName="System.Data.SqlClient" />
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.91,1433;initial catalog=ClientPortalDW;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
