--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -1014,6 +1014,7 @@
     <Content Include="Areas\AB\Views\Clients\Index.cshtml" />
     <Content Include="Areas\RevTrack\Views\Prog\Clients.cshtml" />
     <Content Include="Areas\AB\Views\Dashboard\Index.cshtml" />
+    <Content Include="Areas\AB\Views\Dashboard\Client.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
