working on LineItem breakdown

--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -1015,6 +1015,7 @@
     <Content Include="Areas\AB\Views\Dashboard\Index.cshtml" />
     <Content Include="Areas\AB\Views\Dashboard\Client.cshtml" />
     <Content Include="Areas\AB\Views\Shared\ChooseMonth.cshtml" />
+    <Content Include="Areas\AB\Views\Dashboard\LineItems.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
