update publish profiles

--- a/1/Solution/packages/repositories.config
+++ b/1/Solution/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\3\CakeExtracter.ConsoleApplication\packages.config" />
+  <repository path="..\..\..\3\CakeExtracter\CakeExtracter\packages.config" />
   <repository path="..\..\Accounting.Domain\packages.config" />
   <repository path="..\..\ApiClient.Models.DirectTrack\packages.config" />
   <repository path="..\..\ApiClient\packages.config" />
