AdRoll Attribution report - not tested yet

--- a/3/API/AdRoll/AdRoll.csproj
+++ b/3/API/AdRoll/AdRoll.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Entities\Ad.cs" />
     <Compile Include="Entities\AdSummary.cs" />
     <Compile Include="Entities\Advertisable.cs" />
+    <Compile Include="Entities\AttributionSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
